fix size guide font-size, alignment, and missing information issue

--- a/app/src/css/components/SizeGuideModal.scss
+++ b/app/src/css/components/SizeGuideModal.scss
@@ -12,7 +12,7 @@
 
 .SizeGuideTabs__content {
   margin-top: 86px;
-  padding: 0 20px;
+  padding: 0 5px;
 
   @include sm {
     padding: 0 60px;
